--- a/apps/ethang-tanstack/index.html
+++ b/apps/ethang-tanstack/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EthanG</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/ios/180.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/ios/32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/ios/16.png">
+    <link rel="icon" href="/favicon.ico" sizes="48x48">
+    <link rel="icon" href="/android/android-launchericon-96-96.png" sizes="any" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/ios/180.png">
     <link rel="manifest" href="/manifest.webmanifest">
   </head>
   <body>
