--- a/apps/sterett/index.html
+++ b/apps/sterett/index.html
@@ -1,10 +1,9 @@
 <!doctype html>
-<html lang="en" class="dark">
+<html lang="en">
   <head>
-    <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Convex Chat</title>
+    <title>Sterett Creek Village Trustee</title>
   </head>
 
   <body>
