--- a/apps/ethang-tanstack/index.html
+++ b/apps/ethang-tanstack/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en-US" class="dark">
+<html lang="en-US">
   <head>
     <meta charset="UTF8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" href="/ios/180.png">
     <link rel="manifest" href="/manifest.webmanifest">
   </head>
-  <body>
+  <body class="dark:bg-black dark:text-white bg-white text-black">
     <div id="app"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
