--- a/apps/ethang-angular/src/index.html
+++ b/apps/ethang-angular/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body class="mat-typography prose max-w-none">
+<body class="prose max-w-none">
   <app-root></app-root>
 </body>
 </html>
