--- a/apps/ethang-angular/src/index.html
+++ b/apps/ethang-angular/src/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html lang="en" data-theme="night">
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>EthanG</title>
+  <title i18n>EthangAngular</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1" i18n-content>
+  <link rel="icon" i18n-rel type="image/x-icon" href="favicon.ico">
 </head>
-<body class="prose max-w-none">
+<body>
   <app-root></app-root>
 </body>
 </html>
