--- a/apps/ethang-angular/src/index.html
+++ b/apps/ethang-angular/src/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="en-US" data-theme="night">
 <head>
   <meta charset="utf-8">
-  <title i18n>EthangAngular</title>
+  <title>EthanG</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1" i18n-content>
-  <link rel="icon" i18n-rel type="image/x-icon" href="favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
