Refactor template loading and update document titles.
Streamlined template fetches by reusing responses to reduce redundant network calls. Added dynamic document title updates for improved user experience. Updated directory structure and adjusted promise handling for better code organization. Upgraded chalk dependency to version 5.4.1 in lock file.

--- a/apps/ethang-vanilla/src/pages/home/home.html
+++ b/apps/ethang-vanilla/src/pages/home/home.html
@@ -4,14 +4,15 @@
   <script type="module">
     const mainContent = document.querySelector("#main-content");
     const blogLink = document.querySelector(`#${blog.id}`);
+    const blogResponse = await fetch(`./templates/blog/${blog.id}/`);
 
     blogLink?.addEventListener("click", async (event) => {
       event.preventDefault();
 
       try {
-        const response = await fetch(`./templates/blog/${blog.id}/`);
-        mainContent.innerHTML = await response.text();
+        mainContent.innerHTML = await blogResponse.text();
         history.pushState(null, null, blogLink.getAttribute("href"));
+        document.title = ${ blog.title }
       } catch {
         location.href = blogLink.getAttribute("href");
       }
