--- a/apps/ethang-vanilla/src/pages/home/home.html
+++ b/apps/ethang-vanilla/src/pages/home/home.html
@@ -4,7 +4,7 @@
   <h2 class="my-4">
     <a
       data-title="<%- blog.title %>"
-      data-template="/blog/<%- blog.id %>"
+      data-template="/blog/<%- blog.id %>/"
       rel="prefetch"
       href="<%- blog.link %>"
       ><%- blog.title %></a
