Remove resume link and simplify blog text
The resume link was removed from the main layout menu as it is no longer needed. Additionally, simplified wording in the blog post for clarity by replacing "HTTP libraries" with "HTTP".

--- a/apps/ethang-vanilla/src/pages/blogs/javascript-standard-library/javascript-standard-library.html
+++ b/apps/ethang-vanilla/src/pages/blogs/javascript-standard-library/javascript-standard-library.html
@@ -37,7 +37,7 @@
     </li>
     <li>
       <strong>Networking</strong>: Standardized APIs for sockets, WebSockets,
-      and HTTP libraries.
+      and HTTP.
     </li>
     <li>
       <strong>Concurrency/Asynchrony</strong>: High-level abstractions for
