--- a/apps/ethang-vanilla/src/pages/blogs/javascript-standard-library/javascript-standard-library.html
+++ b/apps/ethang-vanilla/src/pages/blogs/javascript-standard-library/javascript-standard-library.html
@@ -55,8 +55,8 @@
     </li>
     <li>
       <strong>Mathematics and Randomness</strong>: Support for working with
-      vectors, matrices, and general numeric computing. As well as PRNG utilities
-      for reproducible randomness.
+      vectors, matrices, and general numeric computing. As well as PRNG
+      utilities for reproducible randomness.
     </li>
     <li>
       <strong>File I/O</strong>: Methods to write files directly, available for
