Fix duplicated descriptive text in extract.html
Moved the explanatory text above the form for better readability. Removed the redundant paragraph at the end of the file.

--- a/apps/ethang-vanilla/src/pages/blogs/extract/extract.html
+++ b/apps/ethang-vanilla/src/pages/blogs/extract/extract.html
@@ -76,6 +76,7 @@
             toggleSubmitButton(false);
         });
     </script>
+    <p>Grab RSS feeds from the markup of a page. This is a Cloudflare Worker service used by my other apps.</p>
     <form>
         <label class="input input-bordered flex items-center gap-2">
             URL:
@@ -87,5 +88,4 @@
         </button>
     </form>
     <div data-id="data" class="hidden"></div>
-    <p>Grab RSS feeds from the markup of a page. This is a Cloudflare Worker services used by my other apps.</p>
 </main>
