--- a/apps/ethang-vanilla/src/pages/courses/courses.html
+++ b/apps/ethang-vanilla/src/pages/courses/courses.html
@@ -13,7 +13,5 @@
     courses. Once you're through those, cancel it, move on to the next platform,
     and so on.
   </p>
-  <div class="join join-vertical w-full">
-    ${ courses }
-  </div>
+  <div class="join join-vertical w-full">${ courses }</div>
 </main>
