Fix typo in JavaScript Standard Library blog content
Corrected a grammatical error in the blog text for better clarity. Changed "or what throws" to "of what throws" to enhance readability and accuracy.

--- a/apps/ethang-vanilla/src/pages/blogs/javascript-standard-library/javascript-standard-library.html
+++ b/apps/ethang-vanilla/src/pages/blogs/javascript-standard-library/javascript-standard-library.html
@@ -66,7 +66,7 @@
         <tr>
           <td>Typed Throws</td>
           <td class="text-error">
-            JS has no awareness or build time metadata or what throws.
+            JS has no awareness or build time metadata of what throws.
           </td>
           <td class="text-error">No known definite solutions.</td>
         </tr>
